# dht22-driver

./: .gitignore  Cargo.toml  README.md  diagram.json  justfile  wokwi.toml
.github/workflows/: rust_ci.yml
dht22/: Cargo.toml
dht22/src/: lib.rs
examples/esp32c3mini1/: Cargo.toml  justfile  rust-toolchain.toml
examples/esp32c3mini1/.cargo/: config.toml
examples/esp32c3mini1/src/: main.rs
src/: dht22.rs  lib.rs  main.rs  util.rs
