[workspace]
members = ["dht22", "examples/*"]
resolver = "2"

[workspace.package]
authors=["Tastaturtaste <joshua.moellers@gmx.net>"]
edition = "2021"

[profile.release]
opt-level = "s"
lto = "thin"
strip = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
lto = "thin"
strip = true