[package]
name = "dht22"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
critical-section = "1.1.2"
fugit = "0.3.7"
scopeguard = { version = "1.2.0", default-features = false }
thiserror = "1.0.51"