[package]
name = "dht22"
authors=["Tastaturtaste <joshua.moellers@gmx.net>"]
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []

[dependencies]
critical-section = "1.1.2"
scopeguard = { version = "1.2.0", default-features = false }
