[package]
name = "esp32c3mini1"
publish = false
authors = ["Tastaturtaste <joshua.moellers@gmx.net>"]
edition = "2021"
version = "0.0.0"
rust-version = "1.71"

[profile.release]
opt-level = "s"
lto = "thin"
strip = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
lto = "thin"
strip = true

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
embedded-svc = "*"
esp-idf-sys = "0.33.7"
esp-idf-hal = "0.42.5"
dht22-driver = { path = "../../", features = ["std"] }

[build-dependencies]
embuild = "0.31.3"
